client game logic 완성

--- a/package.json
+++ b/package.json
@@ -1,9 +1,20 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
-  , "dependencies": {
-      "express": "2.5.8"
-    , "jade": ">= 0.0.1"
-  }
+    "name": "weword",
+    "description": "What's the word for Vu:Talk',
+    "version": "0.0.1",
+    "author":{
+        "name": "TeamV",
+        "email": "team-v@lge.com"
+    },
+    "dependencies" : {
+        "express": "2.5.8",
+        "jade": "0.28.1",
+        "coffee-script": "1.4.0",
+        "socket.io": "0.9.13",
+        "nodemon":"0.6.23"
+    },
+    "engines" : {
+        "node": "0.8.x",
+        "npm" : "1.1.x"
+    }
 }
