bug fix on package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "weword",
-    "description": "What's the word for Vu:Talk',
+    "description": "What's the word for Vu:Talk",
     "version": "0.0.1",
     "author":{
         "name": "TeamV",
